# esources

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  config.py  conftest.py  crypto.py  deploy.sh  ip_check.py  pyproject.toml  ratelimit.py  requirements.txt  store.py  util.py
.github/workflows/: scan.yml
infra/: firebase.json  firestore.rules  setup-gcp.sh
migrate/: 01_discover_attributes.sql  02_extract_esources.sql  03_discover_patroncode_polarity.sql  backfill_descriptions_from_wix.py  cleanup_root_categories.py  drop_alphabetical_list.py  drop_category_display_order.py  flip_free_sites_to_open.py  import_extract.py  sync_descriptions_from_wix.py
routes/: __init__.py  admin.py  api.py  public.py
screenshots/: README.md
src/esources/: __init__.py  config.py  gateway.py  ip_check.py  main.py  papi_client.py
src/esources/routes/: admin.py  public.py
static/: style.css
templates/: base.html  card_login.html  embed.html  error.html  launch_post.html  listing.html
templates/admin/: categories.html  edit.html  list.html  login.html
tests/: conftest.py  test_api.py  test_crypto.py  test_gateway.py  test_ip_check.py  test_papi.py  test_util.py
wix/: approach-a-iframe-embed.md  approach-b-velo-repeater.md  embed-redesign-context.md  velo_page_code.js
