[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esources"
version = "0.1.0"
description = "Open-source replacement for Polaris classic-PAC eResources: GCP Cloud Run + Firestore, with IP and library-card patron auth"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Rochester Hills Public Library"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Flask",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Intended Audience :: Information Technology",
]
dependencies = [
  "Flask>=3.0,<4",
  "Werkzeug>=3.0,<4",
  "gunicorn>=23.0",
  "Authlib>=1.3",
  "requests>=2.31",
  "Flask-WTF>=1.2",
  "cryptography>=42.0",
  "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/RHPubLib/esources"
Source = "https://github.com/RHPubLib/esources"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
esources = [
  "templates/*.html",
  "templates/**/*.html",
  "static/*",
]
